
Working on fetchCategories to handle filter options for profile statements.

Fixed fuzzy guardian search.

The skill profiles now use rideid to link to an assessment. 

The marktable displays a percentage (and colour codes) for achieved
skill statements in a profile.

Added contact title, relationship and receives mailings as extra
fields for InfoBook lists.



Version ClaSS-0.9.34 release (2011/02/7)
-----------------------------------------

Added boarder and private as InfoBook search options.

Flag for medical access added to users table. Apply the patch! 

Field for exchange rate added to orderinvoce table.

Support and Medical tabs removed for admin users unless specifically
flagged medrole or senrole.

Added third contact to the student single field options.

Fixed display of enrolment notes.

Added siblings flag to the info table and made part of student enrolment data.



Version ClaSS-0.9.33 release (2011/01/30)
-----------------------------------------

The SEN tab renamed as Support.

Added sencurriculum field extra.

The report list table now made a sidtable.

New clicktotransport icon. Displays on the Register list.

Use xmlreader for subcomments on reports.

Moved from deprecated PHP function eregi to preg_match.

Changed send_email_to function to allow using the user's email as from
address.

Pulled out email to teachers as its own function and used across
comments, incidents and merits.

New CFG option for emailing merits.

Added a generic message from Report for parent access details to their
epfortolio.

Included form tutors as a bcc on messages to parents.

Tweaked generate_epfusername to cope better with corrupt names.



Version ClaSS-0.9.32 release (2011/01/17)
-----------------------------------------

Changed the rating field in categorydef and rating tables from enum to
smallint (patch!!!). New field othertype added.

Converted xmlfilereader function to use simplexml.

RegistrationTutor added as a field to the Student array.
